syntax = "proto3";

package eliza.v1;

option go_package = "example/gen/eliza/v1;elizav1";

message SayRequest {
  string sentence = 1;
}

message SayResponse {
  string sentence = 1;
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  int64 age = 1;
}

service ElizaService {
  rpc Say(SayRequest) returns (SayResponse) {}
  rpc Hello(HelloRequest) returns (HelloResponse) {}
}
